| Bug #9730 | CHECK TABLE is not killable for Innodb tables | ||
|---|---|---|---|
| Submitted: | 7 Apr 2005 22:29 | Modified: | 12 Jul 2005 10:06 |
| Reporter: | Peter Zaitsev (Basic Quality Contributor) | ||
| Status: | Closed | ||
| Category: | Server: InnoDB | Severity: | S3 (Non-critical) |
| Version: | all | OS: | |
| Assigned to: | Marko Mäkelä | Target Version: | |
[7 Apr 2005 22:29]
Peter Zaitsev
[7 Apr 2005 23:04]
Heikki Tuuri
Hi! We should monitor thd->killed. Regards, Heikki
[8 Apr 2005 12:33]
Marko Mäkelä
I'm currently testing a fix. It would check the flag for every B-tree level being validated, and every 1,000 records being fetched, that is, every 10-20 seconds on typical hardware.
[20 Apr 2005 17:28]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/24169
[12 Jul 2005 10:06]
Marko Mäkelä
Fixed in MySQL 5.0.9.
