InnoDB: Make CHECK TABLE killable. (Bug #9730)